--- a/app/listen1_chrome_extension/listen1.html
+++ b/app/listen1_chrome_extension/listen1.html
@@ -46,24 +46,25 @@
     <script type="text/javascript" src="js/provider/netease.js"></script>
     <script type="text/javascript" src="js/provider/kugou.js"></script>
     <script type="text/javascript" src="js/provider/kuwo.js"></script>
+    <script type="text/javascript" src="js/provider/bilibili.js"></script>
 
     <script type="text/javascript" src="js/myplaylist.js"></script>
     <script type="text/javascript" src="js/loweb.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
 
-    <script src="js/control.js"></script>
+    <!-- <script src="js/control.js"></script> -->
 </head>
 
 <body ng-controller="PlayController as playCtrl" ng-init="loadLocalSettings()">
     <div ng-controller="NavigationController">
         <!-- dialog -->
-        <div class="shadow" ng-hide="is_dialog_hidden==1" style="display: none;"></div>
-        <div class="dialog" ng-hide="is_dialog_hidden==1" style="display: none;" ng-style="myStyle">
-            <div class="dialog-header" style="display: none;"> <span>{{ dialog_title }}</span> <span class="dialog-close" ng-click="closeDialog()">×</span></div>
-            <div class="dialog-body" style="display: none;">
+        <div class="shadow" ng-hide="is_dialog_hidden==1"></div>
+        <div class="dialog" ng-hide="is_dialog_hidden==1" ng-style="myStyle">
+            <div class="dialog-header"> <span>{{ dialog_title }}</span> <span class="dialog-close" ng-click="closeDialog()">×</span></div>
+            <div class="dialog-body">
 
                 <!-- choose playlist dialog -->
-                <ul class="dialog-playlist" ng-show="dialog_type==0" style="display: none;">
+                <ul class="dialog-playlist" ng-show="dialog_type==0">
                     <li class="detail-add" ng-click="newDialogOption(1)">
                         <img src="images/mycover.jpg" />
                         <h2> 新建歌单 </h2>
@@ -237,12 +238,12 @@
                 <!-- make empty placeholder div to position sidebar -->
                 <div class="source-list" ng-show="is_window_hidden==1">
                     <div class="source-button" ng-class="{'active':isActiveTab(0)}" ng-click="changeTab(0)">网易</div>
-                    <!div class="source-button" ng-class="{'active':isActiveTab(1)}" ng-click="changeTab(1)">
-                    <!虾米/div>
+                    <!-- <div class="source-button" ng-class="{'active':isActiveTab(1)}" ng-click="changeTab(1)">虾米</div> -->
                     <div class="source-button" ng-class="{'active':isActiveTab(2)}" ng-click="changeTab(2)">腾讯</div>
                     <!-- <button type="button" class="btn btn-default" ng-class="{'active':isActiveTab(3)}" ng-click="changeTab(3)" ng-show="isDoubanLogin">豆瓣</button> -->
                     <div class="source-button" ng-class="{'active':isActiveTab(4)}" ng-click="changeTab(4)">酷狗</div>
                     <div class="source-button" ng-class="{'active':isActiveTab(5)}" ng-click="changeTab(5)">酷我</div>
+                    <div class="source-button" ng-class="{'active':isActiveTab(6)}" ng-click="changeTab(6)">哔哩</div>
                 </div>
             </div>
 
@@ -283,11 +284,12 @@
 
                         <ul class="nav nav-tabs">
                             <li ng-class="{'active':isActiveTab(0)}" ng-click="changeTab(0)"><a>网易</a></li>
-                            <li ng-class="{'active':isActiveTab(1)}" ng-click="changeTab(1)"><a>虾米</a></li>
+                            <!-- <li ng-class="{'active':isActiveTab(1)}" ng-click="changeTab(1)"><a>虾米</a></li> -->
                             <li ng-class="{'active':isActiveTab(2)}" ng-click="changeTab(2)"><a>QQ音乐</a></li>
                             <li ng-class="{'active':isActiveTab(3)}" ng-click="changeTab(3)" ng-show="isDoubanLogin"><a>豆瓣</a></li>
                             <li ng-class="{'active':isActiveTab(4)}" ng-click="changeTab(4)"><a>酷狗音乐</a></li>
                             <li ng-class="{'active':isActiveTab(5)}" ng-click="changeTab(5)"><a>酷我音乐</a></li>
+                            <li ng-class="{'active':isActiveTab(6)}" ng-click="changeTab(6)"><a>哔哩哔哩</a></li>
                             <img class="searchspinner" id="spinner" src="images/loading.gif" ng-show="loading">
                         </ul>
                         <ul class="detail-songlist">
@@ -371,7 +373,7 @@
             <p> Listen 1 邮箱: rey@pku.edu.cn </p>
             <p> Listen 1 原主页: <a href="http://listen1.github.io/listen1/" target="_blank"> http://listen1.github.io/listen1/ </a> </p>
             <p> Listen 1 邮箱: githublisten1@gmail.com </p>
-            <p> 当前版本 1.8.2 (本软件基于MIT协议开源免费)</p>
+            <p> 当前版本 1.9.0 (本软件基于MIT协议开源免费)</p>
           </div>
         </div>
       </div>
@@ -506,7 +508,7 @@
                         </div>
                     </div>
 
-                    <div class="menu" ng-hide="menuHidden" style="display: none;">
+                    <div class="menu" ng-hide="menuHidden">
                         <div class="menu-header">
                             <span>播放列表</span>
                             <a class="add-all" ng-click="showDialog(0, playlist)"><small>收藏全部</small></a>
