--- a/app/listen1_chrome_extension/listen1.html
+++ b/app/listen1_chrome_extension/listen1.html
@@ -281,13 +281,14 @@
                                                     <button class="language-button" ng-click="setLang('zh_CN')">简体中文</button>
                                                     <button class="language-button" ng-click="setLang('en_US')">English</button>
                                                 </div>
-                                            </div><div class="settings-title"><span>{{_ACRYLIC}}<span></div>
-                                            <div class="settings-content">
-                                                <div>
-                                                    <button class="acrylic-button" ng-click="setAcry()">开启</button>
-                                                    <button class="acrylic-button" ng-click="setAcry()">关闭</button>
-                                                </div>
                                             </div>
+                                            <!-- <div class="settings-title"><span>{{_ACRYLIC}}<span></div> -->
+                                            <!-- <div class="settings-content"> -->
+                                                <!-- <div> -->
+                                                    <!-- <button class="acrylic-button" ng-click="setAcry()">开启</button> -->
+                                                    <!-- <button class="acrylic-button" ng-click="setAcry()">关闭</button> -->
+                                                <!-- </div> -->
+                                            <!-- </div> -->
                           <div class="settings-title"><span>{{_BACKUP_PLAYLIST}}<span></div>
                           <div class="settings-content">
                             <p>{{_BACKUP_WARNING}}</p>
