--- a/app/listen1_chrome_extension/listen1.html
+++ b/app/listen1_chrome_extension/listen1.html
@@ -32,6 +32,8 @@
     <script type="text/javascript" src="js/vendor/bigint.js"></script>
     <script type="text/javascript" src="js/vendor/timer.js"></script>
     <script type="text/javascript" src="js/vendor/async.min.js"></script>
+    <script type="text/javascript" src="js/vendor/cryptojs_aes.js"></script>
+    <script type="text/javascript" src="js/vendor/jsencrypt.min.js"></script>
     <script type="text/javascript" src="js/github_api.js"></script>
     <script type="text/javascript" src="js/github.js"></script>
     <script type="text/javascript" src="js/lastfm.js"></script>
@@ -345,13 +347,20 @@
                               <button class="btn btn-primary confirm-button" ng-show="lastfm.isAuthRequested()" ng-click="lastfm.cancelAuth();">{{_CANCEL_CONNECT}}</button>
                             </div>
                           </div>
-
-                          <div class="settings-title"><span>{{_ABOUT}}<span></div>
+                          <div class="settings-title"><span>{{_LYRIC_DISPLAY}}</span></div>
+                                        <div class="settings-content">
+                                            <div class="shortcut" ng-if="!isChrome" class="btn btn-primary confirm-button">
+                                                <svg class="feather" ng-show="!enableLyricFloatingWindow" ng-click="openLyricFloatingWindow(true)"><use xlink:href="images/feather-sprite.svg#square"></use></svg>
+                                                <svg class="feather" ng-show="enableLyricFloatingWindow" ng-click="openLyricFloatingWindow(true)"><use xlink:href="images/feather-sprite.svg#check-square"></use></svg>
+                                                <span ng-show="enableLyricFloatingWindow"></span>{{_SHOW_DESKTOP_LYRIC}}
+                                            </div>
+                                        </div>
+                                        <div class="settings-title"><span>{{_ABOUT}}<span></div>
                           <div class="settings-content">
                             <p> Listen 1 {{_HOMEPAGE}}: <a open-url="'http://listen1.github.io/listen1/'"> http://listen1.github.io/listen1/ </a> </p>
                             <p> Listen 1 Fluent {{_HOMEPAGE}}: <a open-url="'https://github.com/Reycn/listen1_desktop_fluent'"> https://github.com/Reycn/listen1_desktop_fluent </a> </p>
                             <p> {{_DESIGNER}}: iparanoid </p>
-                            <p> {{_VERSION}}: 2.3.1 {{_LICENSE_NOTICE}}</p>
+                            <p> {{_VERSION}}: 2.4.0 {{_LICENSE_NOTICE}}</p>
                           </div>
                         </div>
                       </div>
